--- a/archivesspace/mit.css
+++ b/archivesspace/mit.css
@@ -1,9 +1,13 @@
 a { color: #337AB7; } 
 h1 { font-size: 1.75em; }
+.profile svg {
+	margin-right: 0.625rem;
+}
+.profile svg .color {
+	fill: #424242;
+}
 #footer_links a:link { color:#FFF; text-decoration:none; font-weight:normal; }
 #footer_links a:visited { color: #FFF; text-decoration:none; font-weight:normal; }
 #footer_links a:hover { color: #FFF; text-decoration:underline; font-weight:normal; }
 #footer_links a:active { color: #FFF; text-decoration:none; font-weight:normal; }
 #footer_links { color: #FFF; text-decoration:none; font-weight:normal; }
-
-
